--- a/css/cssVichom.css
+++ b/css/cssVichom.css
@@ -346,6 +346,11 @@
 }
 
 
+
+
+
+
+
 /* @end */
 
 
@@ -373,6 +378,74 @@
 
 
 /* @end */
+
+/* @group VICHOM GLOBO MENSAJES */
+
+#idgloboMensajes { 
+	
+	margin: 0 auto;
+	width: 16px;
+	height: 16px;
+	background: #ffffff;
+	/*estos tres valores deben ser la mitad del tamaño*/
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	
+	left: 0px; top: 0px; bottom: 0px; right: 0px;
+
+}
+
+#idgloboMensajes p {
+	margin-top: -4px;
+	font-size: 10px;
+	font-weight: bold;
+	color: #000000;
+
+}
+
+/* @end */
+
+
+
+/*.globoMensajesContenido {
+  position: absolute;
+  top: 50%;
+  transform: translateY(50%);
+
+
+
+.circuloGloboMensajes {
+	background-color: orange;
+    width: 50px;
+    height: 50px;
+    padding: 0px 0px;
+    border-radius: 35px;
+    font-size: 20px;
+    line-height: 1.33;
+    z-index: 200;
+   
+}
+
+.circuloGloboMensajesColZindex {
+ 
+    z-index: 15;
+}}*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
